Bring 1.21 backend URL encoding in line with 1.8